--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WhatsApp Zero - Inicie Conversas sem Salvar Contatos</title>
     <meta name="description" content="Inicie conversas no WhatsApp sem a necessidade de salvar contatos na agenda. Simples e rápido.">
+    <meta name="google-adsense-account" content="ca-pub-8986790347683705">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="canonical" href="https://example.com/whatsapp-zero" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
