--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="canonical" href="https://example.com/whatsapp-zero" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-
 <body>
     <div class="bodyStyle">
         <div class="containerMSWA">
@@ -36,7 +35,7 @@
                         </div>
                         <div style="clear: both; text-align: center; width: 100%; margin:auto;">
                             <div class="containerNumero">
-                                Digite  DDD + o Número (Ex. 21912345678):
+                               <strong>Digite  DDD + o Número (Ex. 21912345678):</strong> 
                                 <br />
                                 <div class="input-group flex-nowrap">
                                     <span class="input-group-text" id="addon-wrapping">+</span>
@@ -64,7 +63,7 @@
                     </td>
                 </tr>
             </table>
-
+    </div>
 
     </div>
     <script type="text/javascript" src="./js/main.js"> </script>
